# python-comprehensive-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  log.md  pyproject.toml  tasks.md
.gemini/ralph/: state.json
.github/workflows/: ci.yml  security.yml
alembic/: env.py
alembic/versions/: cfcf071a704d_initial_migration.py
docs/: adding-features.md  architecture.md  best-practices.md
src/python_template/api/: dependencies.py  exceptions.py  main.py
src/python_template/api/v1/: items.py  sse.py  ws.py
src/python_template/cli/: main.py
src/python_template/core/: config.py  logger.py
src/python_template/crud/: item.py
src/python_template/db/: session.py
src/python_template/models/: item.py
src/python_template/schemas/: item.py
src/python_template/services/: rest_client.py
tests/: conftest.py  test_api.py  test_cli.py  test_client_server.py  test_items.py  test_rest_client.py  test_sse.py  test_ws.py
